# FIPA

./: .gitignore  1  1.1  3  3.1  README.md  a.c  a.out  aa.txt  chageaa.txt  qgragh.dot  simple_test.c  temp.g  test
examples/chage/: READEME.md
examples/chage/input/: chage.bc  chage_32  chage_64  compile_commands.json
examples/chage/output/: aa.txt  analysis_summary_u_0bit.txt  chage.pinout  chage.pinout_new  chage.symtbl  chage_quanfile.txt  chage_statements_ranges.xml  chage_z3_result.txt  chage_z3_result_b.txt  chage_z3_result_b_0bit.txt  chage_z3_result_u_0bit.txt  chage_z3_result_u_64bit.txt  chageoutput1.txt  chageoutput2.txt  edge_info_output.txt  get_edge_info.py  global_val_use.xml  minsencode_b_0bit.txt  minsencode_u_0bit.txt  minsencode_u_64bit.txt  nonsensitive_partition_u_0bit.txt  project_statements_ranges.xml  sensitive_partition_u_0bit.txt  sub_global.py
examples/chage_rename/input/: chage.bc  chage_32  chage_64  compile_commands.json
examples/chage_rename/output/: chage_statements_ranges.xml
examples/chsh/: READEME.md
examples/chsh/input/: chsh  chsh.bc  chsh_32  chsh_64  compile_commands.json
examples/chsh/output/: chsh_quanfile.txt  chsh_statements_ranges.xml  chsh_z3_result.txt  chsh_z3_result_b_0bit.txt  chsh_z3_result_u_0bit.txt  chsh_z3_result_u_64bit.txt  edge_info_output.txt  global_val_use.xml  minsencode_b_0bit.txt  minsencode_u_0bit.txt  minsencode_u_64bit.txt  project_statements_ranges.xml
examples/mavlink-client/: READEME.md
examples/mavlink-client/input/: compile_commands.json  mavlink-client.bc  mavlink_client.ll  mavlink_client_32  mavlink_client_64
examples/mavlink-client/output/: edge_info_output.txt  global_val_use.xml  mavlink-client_quanfile.txt  mavlink-client_statements_ranges.xml  mavlink-client_z3_result_b_0bit.txt  mavlink-client_z3_result_u_0bit.txt  mavlink-client_z3_result_u_64bit.txt  minsencode_b_0bit.txt  minsencode_u_0bit.txt  minsencode_u_64bit.txt  z3_result_u.txt
examples/mavlink-server/: READEME.md
examples/mavlink-server/input/: compile_commands.json  mavlink-server.bc  mavlink_server.ll  mavlink_server_32  mavlink_server_64
examples/mavlink-server/output/: edge_info_output.txt  global_val_use.xml  mavlink-server_quanfile.txt  mavlink-server_statements_ranges.xml  mavlink-server_z3_result_b_0bit.txt  mavlink-server_z3_result_u.txt  mavlink-server_z3_result_u_0bit.txt  mavlink-server_z3_result_u_64bit.txt  minsencode_b_0bit.txt
examples/nginx/: READEME.md
examples/nginx-1.9.5/input/: nginx-1.9.5.bc
examples/nginx-1.9.5/output/: analysis.py  global_val_use.xml  minsencode_b_0bit.txt  minsencode_u_0bit.txt  minsencode_u_64bit.txt  nginx-1.9.5_z3_result_b_0bit.txt  nginx-1.9.5_z3_result_u_0bit.txt  nginx-1.9.5_z3_result_u_64bit.txt
examples/nginx/auth/: .htpasswd
examples/nginx/finally_partition/: nginx-1.15.5_client.tar.xz  nginx-1.15.5_server.tar.xz
examples/nginx/input/: compile_commands.json  nginx.bc  nginx_32  nginx_64  nginx_auth_32
examples/nginx/output/: edge_info_output.txt  global_val_use.xml  minsencode_b_0bit.txt  minsencode_u_0bit.txt  minsencode_u_64bit.txt  nginx_quanfile.txt  nginx_quanfile.txttest  nginx_statements_ranges.xml  nginx_z3_result_b_0bit.txt  nginx_z3_result_u_0bit.txt  nginx_z3_result_u_64bit.txt
examples/nginx_sslkey_auth/: READEME.md
examples/passwd/: READEME.md
examples/passwd/input/: passwd  passwd.bc  (+3 more)
examples/shadow-utils/: autogen.sh
examples/telnet/: READEME.md
examples/thttpd/: READEME.md
examples/useradd/: READEME.md
examples/wget/: READEME.md
lib/: compile_commands.json
scripts/: addrinfo_deep_copy_example.c  addrinfo_fixed_example.x  addrinfo_manual_conversion.c  addrinfo_solution_manual.x  analyze_partition_results.py  based_qg_bi_praming.py  extract_statement_linerange.py  get_all_senseAddr_use_progate_for_refactor_output.py  get_edge_info.py  merge_fc_and_map_statements.py  merge_pinout_and_generate_stmt_edge.py  paper_section_global_var.md  prepare_refactor_data.py  refactor_flowcheck_output.py  refactor_function_add_rpc.py  rpc_helper.py  self_reference_analysis.md  step_extract_statement_linerange.py  update_nginx_makefile.sh
scripts/fake_libc_include/: _fake_defines.h  _fake_typedefs.h  pwd.h  shadow.h
src/Flowcheckdocker/: .dockerignore  Dockerfile  Dockerfile_no_valgrind  README
src/Flowcheckdocker/flowcheck-1.20/valgrind-r15939+flowcheck/exp-flowcheck/: Makefile  Makefile.am  Makefile.in  fc_errors.c  fc_include.h  fc_leakcheck.c  fc_machine.c  fc_main.c  fc_malloc_wrappers.c  fc_replace_strmem.c  fc_translate.c  fc_translate.h  flowcheck.h  fold.c  fold.h  popcount.c  popcount.h  trace_runtime.back  trace_runtime.c  trace_runtime.c.have_thttpd  trace_runtime.h  trace_translate.c  trace_translate.h
src/Flowcheckdocker/flowcheck-1.20/valgrind-r15939+flowcheck/exp-flowcheck/.deps/: exp_flowcheck_x86_linux-fc_errors.Po  exp_flowcheck_x86_linux-fc_leakcheck.Po  exp_flowcheck_x86_linux-fc_machine.Po  exp_flowcheck_x86_linux-fc_main.Po  exp_flowcheck_x86_linux-fc_malloc_wrappers.Po  exp_flowcheck_x86_linux-fc_translate.Po  exp_flowcheck_x86_linux-fold.Po  exp_flowcheck_x86_linux-popcount.Po  exp_flowcheck_x86_linux-trace_runtime.Po  exp_flowcheck_x86_linux-trace_translate.Po  vgpreload_exp_flowcheck_x86_linux_so-fc_replace_strmem.Po
src/Flowcheckdocker/flowcheck-1.20/valgrind-r15939+flowcheck/exp-flowcheck/tests/: Makefile  Makefile.in
src/pin-3.18-98332-gaebd7b1e6-gcc-linux/: wget
src/program-dependence-graph-main/: .gitignore  CMakeLists.txt  Myreadme.md
src/program-dependence-graph-main/Edge_Specification/: example.ll
src/program-dependence-graph-main/include/: GraphTraits.hh  GraphWriter.hh  PDGCallGraph.hh  PDGEnums.hh  PDGNode.hh  QPGGraph.hh  QuanProGraphWriter.hh  parserxml.hh
src/program-dependence-graph-main/src/: GlobalVarUsage.cpp  PDGCallGraph.cpp  PDGUtils.cpp  QPGGraph.cpp  QPGGraph.cpp.nginx  QPGGraph_b.cpp  QPGGraph_noz3.cpp  QPGGraph_noz3_u.cpp  QPGGraph_u.cpp  QuanProGraphWriter.cpp  count_ir_stats.cpp  parserxml.cpp
src/statement_range/: CMakeLists.txt  README.md  get_statement_range.cpp
(+2195 files in other folders)
